@@ -1,4 +1,9 @@
-﻿shmuel 24.11.2014 02:05:58 +0200 - build 451
+﻿shmuel 27.11.2014 21:06:15 +0200 - build 452
+
+1. Файловый формат клавиатурного макроса сделан подобным формату стационарного макроса.
+   Сохранённые клавиатурные макросы прежнего формата должны быть преобразованы в новый.
+
+shmuel 24.11.2014 02:05:58 +0200 - build 451
 
 1. LuaFAR: в функциях editor.Editor и viewer.Viewer значение по умолчанию параметра Title,
    передаваемое в Фар - NULL, а не FileName, как было до сих пор. См. M#2867.
